docker-compose working

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
 
   image:
     build:
-      context: .
+      context: ./images/
     image: images
     container_name: images-image
     env_file: docker-compose.env
